ipv4-mgmt-vpc.template
AWSTemplateFormatVersion: 2010-09-09
Description: 'Provides networking configuration for a standard management VPC (qs-1nb14cqcg)'
Metadata:
    AWS::CloudFormation::Interface:
        ParameterGroups:
          - Label:
                default: Region Config
            Parameters:
              - pRegionAZ1Name
              - pRegionAZ2Name
          - Label:
                default: Management VPC Configuration
            Parameters:
              - pManagementVPCName
              - pManagementCIDR
              - pManagementDMZSubnetACIDR
              - pManagementDMZSubnetBCIDR
              - pVPCTenancy
        ParameterLabels:
            pManagementVPCName:
                default: Name of Management VPC to create
            pManagementCIDR:
                default: CIDR block of Management VPC
            pManagementDMZSubnetACIDR:
                default: CIDR block of Management DMZ SubnetA
            pManagementDMZSubnetBCIDR:
                default: CIDR block of Management DMZ SubnetB
            pVPCTenancy:
                default: Instance tenancy
    Stack:
        Value: 2
    VersionDate:
        Value: 20160510
    Identifier:
        Value: template-vpc-management
    Input:
        Description: CIDR blocks, VPC names, KeyName, EC2 instance size
    Output:
        Description: Outputs ID of all deployed resources
Parameters:
    pRegionAZ1Name:
        Description: Availability Zone 1 Name in Region
        Type: String
        Default: us-west-2a
    pRegionAZ2Name:
        Description: Availability Zone 2 Name in Region
        Type: String
        Default: us-west-2b
    pManagementVPCName:
        Description: ACG Management VPC Name
        Type: String
        Default: ACG Management VPC
    pManagementCIDR:
        Description: CIDR block for Management VPC
        Type: String
        Default: 10.11.0.0/16
    pManagementDMZSubnetACIDR:
        Description: CIDR block for Management subnet A
        Type: String
        Default: 10.11.10.0/24
    pManagementDMZSubnetBCIDR:
        Description: CIDR block for Management subnet B
        Type: String
        Default: 10.11.20.0/24
    pManagementPrivateSubnetACIDR:
        Description: CIDR block for Management subnet A
        Type: String
        Default: 10.11.30.0/24
    pManagementPrivateSubnetBCIDR:
        Description: CIDR block for Management subnet B
        Type: String
        Default: 10.11.40.0/24
    pVPCTenancy:
        Description: Instance tenancy behavior for this VPC
        Type: String
        Default: default
        AllowedValues:
          - default
          - dedicated
Resources:
    rVPCManagement:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: !Ref pManagementCIDR
            InstanceTenancy: !Ref pVPCTenancy
            EnableDnsSupport: true
            EnableDnsHostnames: true
            Tags:
              - Key: Name
                Value: !Ref pManagementVPCName
    rManagementDMZSubnetA:
        Type: AWS::EC2::Subnet
        Properties:
            CidrBlock: !Ref pManagementDMZSubnetACIDR
            AvailabilityZone: !Ref pRegionAZ1Name
            VpcId: !Ref rVPCManagement
            Tags:
              - Key: Name
                Value: ACG Management Public Subnet A
    rManagementDMZSubnetB:
        Type: AWS::EC2::Subnet
        Properties:
            CidrBlock: !Ref pManagementDMZSubnetBCIDR
            AvailabilityZone: !Ref pRegionAZ2Name
            VpcId: !Ref rVPCManagement
            Tags:
              - Key: Name
                Value: ACG Management Public Subnet B
    rManagementPrivateSubnetA:
        Type: AWS::EC2::Subnet
        Properties:
            CidrBlock: !Ref pManagementPrivateSubnetACIDR
            AvailabilityZone: !Ref pRegionAZ1Name
            VpcId: !Ref rVPCManagement
            Tags:
              - Key: Name
                Value: ACG Management Private Subnet A
    rManagementPrivateSubnetB:
        Type: AWS::EC2::Subnet
        Properties:
            CidrBlock: !Ref pManagementPrivateSubnetBCIDR
            AvailabilityZone: !Ref pRegionAZ2Name
            VpcId: !Ref rVPCManagement
            Tags:
              - Key: Name
                Value: ACG Management Private Subnet B
    rIGWManagement:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
              - Key: Name
                Value: ACG igw-management
    rRouteTableMgmtPrivate:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref rVPCManagement
            Tags:
              - Key: Name
                Value: ACG Management Private Route
    rRouteTableMgmtDMZ:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref rVPCManagement
            Tags:
              - Key: Name
                Value: ACG Management Public Route
    rRouteMgmtIGW:
        DependsOn:
          - rGWAttachmentMgmtIGW
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref rRouteTableMgmtDMZ
            GatewayId: !Ref rIGWManagement
            DestinationCidrBlock: 0.0.0.0/0
    rRouteAssocMgmtDMZA:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref rRouteTableMgmtDMZ
            SubnetId: !Ref rManagementDMZSubnetA
    rRouteAssocMgmtDMZB:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref rRouteTableMgmtDMZ
            SubnetId: !Ref rManagementDMZSubnetB
    rRouteAssocMgmtPrivA:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref rRouteTableMgmtPrivate
            SubnetId: !Ref rManagementPrivateSubnetA
    rRouteAssocMgmtPrivB:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref rRouteTableMgmtPrivate
            SubnetId: !Ref rManagementPrivateSubnetB
    rEIPProdNAT:
        Type: AWS::EC2::EIP
        Properties:
            Domain: vpc
    rNATGateway:
        Type: AWS::EC2::NatGateway
        DependsOn: rIGWManagement
        Properties:
            AllocationId: !GetAtt rEIPProdNAT.AllocationId
            SubnetId: !Ref rManagementDMZSubnetA
    rGWAttachmentMgmtIGW:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            VpcId: !Ref rVPCManagement
            InternetGatewayId: !Ref rIGWManagement
    rRouteMgmtNGW:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref rRouteTableMgmtPrivate
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref rNATGateway
Outputs:
    rVPCManagement:
        Value: !Ref rVPCManagement
    rManagementDMZSubnetA:
        Value: !Ref rManagementDMZSubnetA
    rManagementDMZSubnetB:
        Value: !Ref rManagementDMZSubnetB
    rManagementPrivateSubnetA:
        Value: !Ref rManagementPrivateSubnetA
    rManagementPrivateSubnetB:
        Value: !Ref rManagementPrivateSubnetB
    rRouteTableMgmtPrivate:
        Value: !Ref rRouteTableMgmtPrivate
    rRouteTableMgmtDMZ:
        Value: !Ref rRouteTableMgmtDMZ
